kitten/reported_bugs/rust/rust-86239/stderr.txt
error: allow, cfg, cfg_attr, deny, forbid, and warn are the only allowed built-in attributes in function parameters

  --> mutant.rs:16:24

   |

16 | fn extended ( & self , # [ doc ( alias = "false" ) ] DiagnosticBuilder < 'tcx > ) -> DiagnosticBuilder < 'tcx > {

   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



error[E0433]: failed to resolve: maybe a missing crate `rustc_middle`?

 --> mutant.rs:2:5

  |

2 | use rustc_middle :: ty :: { Ty , TypeFoldable } ;

  |     ^^^^^^^^^^^^ maybe a missing crate `rustc_middle`?



error[E0432]: unresolved import `rustc_errors`

 --> mutant.rs:1:5

  |

1 | use rustc_errors :: { Applicability , DiagnosticBuilder , DiagnosticId } ;

  |     ^^^^^^^^^^^^ maybe a missing crate `rustc_errors`?



error[E0432]: unresolved import `rustc_session`

 --> mutant.rs:3:5

  |

3 | use rustc_session :: Session ;

  |     ^^^^^^^^^^^^^ maybe a missing crate `rustc_session`?



error[E0432]: unresolved import `rustc_span`

 --> mutant.rs:4:5

  |

4 | use rustc_span :: Span ;

  |     ^^^^^^^^^^ maybe a missing crate `rustc_span`?



error[E0433]: failed to resolve: use of undeclared crate or module `rustc_errors`

  --> mutant.rs:41:1

   |

41 | rustc_errors :: error_code ! ( E0617 )

   | ^^^^^^^^^^^^ use of undeclared crate or module `rustc_errors`



error[E0433]: failed to resolve: use of undeclared crate or module `rustc_errors`

  --> mutant.rs:97:1

   |

97 | rustc_errors :: error_code ! ( E0607 )

   | ^^^^^^^^^^^^ use of undeclared crate or module `rustc_errors`



error[E0425]: cannot find value `err` in this scope

   --> mutant.rs:17:1

    |

17  | err

    | ^^^ help: a tuple variant with a similar name exists: `Err`



error[E0412]: cannot find type `Ty` in this scope

  --> mutant.rs:23:5

   |

23 | t : Ty < 'tcx > ,

   |     ^^ not found in this scope



error[E0412]: cannot find type `Ty` in this scope

  --> mutant.rs:30:5

   |

30 | t : Ty < 'tcx > ,

   |     ^^ not found in this scope



error[E0412]: cannot find type `Ty` in this scope

  --> mutant.rs:79:11

   |

79 | expr_ty : Ty < 'tcx > ,

   |           ^^ not found in this scope



error[E0412]: cannot find type `Ty` in this scope

  --> mutant.rs:86:11

   |

86 | expr_ty : Ty < 'tcx > ,

   |           ^^ not found in this scope



warning: anonymous parameters are deprecated and will be removed in the next edition.

  --> mutant.rs:16:54

   |

16 | fn extended ( & self , # [ doc ( alias = "false" ) ] DiagnosticBuilder < 'tcx > ) -> DiagnosticBuilder < 'tcx > {

   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ help: try naming the parameter or explicitly ignoring it: `_: DiagnosticBuilder < 'tcx >`

   |

   = note: `#[warn(anonymous_parameters)]` on by default

   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in the 2018 edition!

   = note: for more information, see issue #41686 <https://github.com/rust-lang/rust/issues/41686>



error: internal compiler error: compiler/rustc_middle/src/hir/map/mod.rs:810:21: no name for param # [ doc ( alias = "false" ) ] DiagnosticBuilder < 'tcx >  (hir_id=HirId { owner: DefId(0:33 ~ mutant[8787]::StructuredDiagnostic::extended), local_id: 3 })



thread 'rustc' panicked at 'Box<dyn Any>', compiler/rustc_errors/src/lib.rs:1007:9

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.54.0-nightly (eab201df7 2021-06-09) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_mod_attrs] checking attributes in top-level module

#1 [analysis] running analysis passes on this crate

end of query stack

error: aborting due to 13 previous errors; 1 warning emitted



Some errors have detailed explanations: E0412, E0425, E0432, E0433.

For more information about an error, try `rustc --explain E0412`.

